Fixed CSS bug that made previous and next form buttons overlap when resolution was under 420px.

--- a/SprintSurvey/css/style.css
+++ b/SprintSurvey/css/style.css
@@ -64,7 +64,6 @@ footer ul {
     margin: 0;
     margin-left: -15px;
     padding: 0;
-    overflow: hidden;
 }
 
 footer ul.social-links {
